# ml-kem-ml-dsa-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: derivation-ticket.md
.github/workflows/: ci.yml
audits/side-channel/: manifest.json
cpp/: CMakeLists.txt
cpp/include/pqcore/: dsa.hpp  dsa_helpers.hpp  dsa_internal.hpp  encoding.hpp  entropy.hpp  field.hpp  kem.hpp  kem_internal.hpp  ntt.hpp  params.hpp  pke.hpp  polynomial.hpp  sampling.hpp  secret_data.hpp  sha3.hpp  vector_harness.hpp
cpp/tests/: test_api_surface.cpp  test_crypto_boundaries.cpp  test_dsa_helpers.cpp  test_dsa_internal.cpp  test_dsa_internal_release_policy.cpp  test_dsa_public_policy.cpp  test_encoding.cpp  test_field.cpp  test_kem_internal.cpp  test_kem_internal_release_policy.cpp  test_ntt.cpp  test_params.cpp  test_pke.cpp  test_pke_release_policy.cpp  test_polynomial.cpp  test_sampling.cpp  test_sampling_release_policy.cpp  test_secret_data.cpp  test_sha3.cpp  test_vector_harness.cpp
docs/: derivation-first-development.md  encoding-and-compression.md  field-elements.md  fips-203-ml-kem-roadmap.md  fips-203-symbols.md  fips-204-ml-dsa-roadmap.md  fips-204-symbols.md  glossary.md  ml-dsa-rounding-hints.md  ml-dsa-signature.md  ml-kem-kem.md  ml-kem-pke.md  mls-integration-notes.md  ntt.md  parameter-tables.md  polynomial-ring.md  production-readiness.md  rust-crate-gate.md  sampling.md  side-channel-review.md  standards-map.md  vector-ingestion.md
fixtures/: README.md  encoding-examples.json  ml-dsa-helper-examples.json  ml-dsa-signature-examples.json  ml-kem-kem-examples.json  ml-kem-pke-examples.json  ntt-examples.json  parameter-sets.json  polynomial-examples.json  sampling-examples.json
learning/: ml-dsa-fips204.track.json  ml-kem-fips203.track.json
rust/: README.md
rust/derivations/: README.md  encoding-and-compression.md  field-elements.md  ml-dsa-rounding-hints.md  ml-dsa-signature.md  ml-kem-kem.md  ml-kem-pke.md  ntt.md  parameter-tables.md  polynomial-ring.md  sampling.md  vector-ingestion.md
rust/pqcore/: Cargo.toml  README.md
rust/pqcore/src/: dsa.rs  field.rs  kem.rs  lib.rs  params.rs  polynomial.rs  vector_runner.rs
schemas/: agentic-learning.schema.json
scripts/: check-docs-glossary.sh  check-rust-crate-gate.sh  check-side-channel-manifest.py  check-vector-manifest.py
test-vectors/: README.md  manifest.json
test-vectors/placeholders/: public-api-failclosed.json
