[package]
name = "pqcore"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Derivation-first ML-KEM and ML-DSA lab crate; not production cryptography."

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-vector-runner"
path = "src/bin/rust-vector-runner.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
